# ergo-cogito-sum

./: Cargo.toml  README.md
assets/: textures.rs
src/: consts.rs  main.rs
src/components/: mod.rs  modifier.rs  objective.rs  person.rs  scenario.rs
src/plugins/: create_room.rs  game_runner.rs  ingame_player.rs  lobby.rs  main_menu.rs  mod.rs
src/resources/: am_actions.rs  game_state.rs  mod.rs  selection_timer.rs
src/systems/: greeting_system.rs  mod.rs  scenario_management.rs
