[package]
name = "ergo-cogito-sum"
version = "0.1.0"
edition = "2021"
exclude = [".git*"]

[dependencies]
web-sys = "0.3.69"
bevy = "0.14.2"
bevy_renet = "0.0.12"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
